--- a/app/templates/components/lane-manuscript.hbs
+++ b/app/templates/components/lane-manuscript.hbs
@@ -1,16 +1,21 @@
-<nav class="nav -horizontal">
-  <ul>
-    <li><a href="#" class="nav_button -previous-page"><span class="popup">{{t 'pagePrev'}}</span></a></li>
-    <li><input class="nav_input -page" value="1"><span class="popup">{{t 'pageCurrent'}}</span></li>
-    <li><a href="#" class="nav_button -next-page"><span class="popup">{{t 'pageNext'}}</span></a></li>
-  </ul>
-  <ul>
-    <li><a href="#" class="nav_button -zoom-out"><span class="popup">{{t 'zoomOut'}}</span></a></li>
-    <li><a href="#" class="nav_button -zoom-in"><span class="popup">{{t 'zoomIn'}}</span></a></li>
-    <li><a href="#" class="nav_button -fullscreen"><span class="popup">{{t 'fullScreen'}}</span></a></li>
-  </ul>
-</nav>
+<header class="lane_header">
+  {{partial 'partials/lane-type'}}
 
-{{! TODO: Scans go here}}
+  <nav class="nav -horizontal">
+    <ul>
+      <li><a href="#" class="nav_button -previous-page"><span class="popup">{{t 'pagePrev'}}</span></a></li>
+      <li><input class="nav_input -page" value="1"><span class="popup">{{t 'pageCurrent'}}</span></li>
+      <li><a href="#" class="nav_button -next-page"><span class="popup">{{t 'pageNext'}}</span></a></li>
+    </ul>
+    <ul>
+      <li><a href="#" class="nav_button -zoom-out"><span class="popup">{{t 'zoomOut'}}</span></a></li>
+      <li><a href="#" class="nav_button -zoom-in"><span class="popup">{{t 'zoomIn'}}</span></a></li>
+      <li><a href="#" class="nav_button -fullscreen"><span class="popup">{{t 'fullScreen'}}</span></a></li>
+    </ul>
+  </nav>
+</header>
 
-{{yield}}
+<div class="lane_content">
+  {{! TODO: Scans go here}}
+  {{yield}}
+</div>
