Add saturn to fontello fonts Related to: ADWD-1957

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,7 @@
 @import 'blocks/content';
 @import 'blocks/drag-handle';
 @import 'blocks/header';
+@import 'blocks/icons';
 @import 'blocks/lane';
 @import 'blocks/main';
 @import 'blocks/metadata';
