Allow loading of external fonts
Update config to allow loading of external fonts which are
required by MathJax.

Define buttonSvgPath as default

--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -38,7 +38,7 @@
 }
 
 .header_main {
-  @extend %clearfix;
+  @include clearfix;
   height: (3 * $g);
   padding: ($g / 4) ($g / 2) ($g / 4) (5 * $g); // Make room on left for logo
 }
