WIP: Add bibliographic data, display child variants
This is a work in progress adding two major features:

1. Loading and displaying of bibliographic data

   This should be complete, but is untested.

2. Displaying child variants (aka footnotes in footnotes)

   Child variants are displayed at the correct position, but
   neither is the reference in the parent highlighted, nor
   is a connector line drawn.

Your mission, should you choose to accept it, is to firstly
rebase this branch onto develop after all open pull requests
have been merged (there shouldn't be any conflicts).

Then add the missing features along with E2E tests, create new
branches and split the code into as many commits as reasonable.
When done, delete this branch - do not merge directly.

As always, should you or any of your team be caught or killed,
the Secretary will disavow any knowledge of your actions.
This message will self-destruct in five seconds. Good luck.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,12 +15,11 @@
 @import 'mixins/header-button';
 @import 'mixins/hover';
 @import 'mixins/icon';
-@import 'mixins/link-border-on-hover';
-@import 'mixins/link-border';
 @import 'mixins/placeholder-color';
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
+@import 'extends/caption';
 @import 'extends/header-aside';
 @import 'extends/popup';
 @import 'extends/spinner';
@@ -47,4 +46,3 @@
 @import 'blocks/transcript';
 @import 'blocks/variant';
 @import 'blocks/variants';
-
