--- a/app/styles/extends/popup.scss
+++ b/app/styles/extends/popup.scss
@@ -8,7 +8,7 @@
   font-style: normal;
   left: 0;
   margin: ($g / 4) 0 0;
-  min-width: 12em;
+  min-width: 6em;
   opacity: 0;
   padding: ($g / 4) ($g / 2);
   pointer-events: none; // TODO: This is not supported in IE<11
@@ -37,6 +37,10 @@
       left: auto;
       right: ($g / 2);
     }
+  }
+
+  &.-wide {
+    min-width: 12em;
   }
 }
 
