Fix missing extends and icons, lint styles
Missing extends should have thrown an error in libsass, but are
ignored. Change icons for "Info & Hilfe" section in sidebar.

--- a/app/styles/mixins/icon.scss
+++ b/app/styles/mixins/icon.scss
@@ -20,7 +20,7 @@
   }
 
   &:before {
-    @extend .icon-#{$name};
+    @extend .icon-#{$name} !optional;
 
     @if $position == 'left' {
       margin-right: .5em;
