--- a/app/styles/blocks/nav.scss
+++ b/app/styles/blocks/nav.scss
@@ -31,7 +31,7 @@
 
 .nav_link {
   &.-about {
-    @include icon('info');
+    @include icon('light-bulb');
   }
 
   &.-back {
@@ -48,7 +48,7 @@
   }
 
   &.-legal {
-    @include icon('paragraph');
+    @include icon('info');
   }
 
   &.-number {
