--- a/app/styles/blocks/lane.scss
+++ b/app/styles/blocks/lane.scss
@@ -40,6 +40,11 @@
   td {
     padding: 0 ($g / 4);
   }
+
+  .space {
+    display: inline-block;
+    width: ($g * 1.41);
+  }
 }
 
 .lane_header {
