Resolve rebasing conflicts

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,7 @@
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
+@import 'extends/caption';
 @import 'extends/header-aside';
 @import 'extends/popup';
 @import 'extends/spinner';
