Link header title to base URL

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="main {{if showNav '-show-nav'}}">
 
   <div class="top-bar">
-    <a href="{{! TODO}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
+    <a href="{{baseURL}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
     <div class="top-bar_right">
       <form class="top-bar_search" action="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/discover" method="get">
         <input type="text" class="top-bar_search-input" name="query" placeholder="{{t 'search'}}">
