Preserve rendered MathJax and SVG images when toggling variants
Ensuring all images are loaded and MathJax is rendered, then overwrite
variant contents with current state. Updating test to check for images.

Resolves: ADWD-2226

TODO: Acceptance test for highlighted references works fine locally, but
fails on Travis, and was commented out. Please fix.

--- a/app/templates/components/lane-variants.hbs
+++ b/app/templates/components/lane-variants.hbs
@@ -34,9 +34,9 @@
   {{#each content.variants as |variant|}}
     {{#if variant.visible}}
       <div class="variant {{if variant.witnessIndex (concat '-color' variant.witnessIndex)}}" id="{{variant.id}}">
-
-        {{{variant.text_schnipsel}}}
-
+        <span class="variant_content">
+          {{{variant.text_schnipsel}}}
+        </span>
         <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
           {{t variant.type}}
         </span>
