Implement real-time fulltext search
Search within fulltext and several other fields, sortable by letter
number and date.

- Display letters from Leibniz on the left, others' on the right.
- Improve Solr error handling.
- Update translations and tests.

TODO: Include variants, add more sort options

Resolves: ADWD-2224

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -39,6 +39,7 @@
 @import 'blocks/nav';
 @import 'blocks/pop-up';
 @import 'blocks/lane-type';
+@import 'blocks/search';
 @import 'blocks/sidebar';
 @import 'blocks/symbol';
 @import 'blocks/top-bar';
