--- a/app/templates/components/letter-header.hbs
+++ b/app/templates/components/letter-header.hbs
@@ -1,6 +1,6 @@
 <div class="header_main">
   <div class="header_title">
-    <h1 class="header_correspondents">
+    <h1 class="header_heading">
       {{content.korrespondenten_anzeige}}
       {{#pop-up}}
         {{t 'sender'}}:
