--- a/app/styles/util/settings.scss
+++ b/app/styles/util/settings.scss
@@ -6,6 +6,9 @@ $shade-dark: rgba(black, .6);
 $shine: rgba(white, .3);
 
 // Semantic colors
+$bg-color: #f7f7f7;
+$lane-bg-color: #fff;
+$lane-bg-dark-color: #eee;
 $border-color: #ccc;
 $border-color-dark: #aaa;
 $link-color: $alpha-color;
@@ -46,3 +49,4 @@ $img-path: '../img/';
 
 // Others
 $noise: url($img-path + 'noise.png');
+$card-shadow: 0 0 1px $shade-medium, 0 2px 5px $shade;
