--- a/app/templates/components/lane-variants.hbs
+++ b/app/templates/components/lane-variants.hbs
@@ -33,13 +33,16 @@
 <div class="lane_content">
   {{#each content.variants as |variant|}}
     {{#if variant.visible}}
-      <div class="variant {{if variant.witnessIndex (concat '-color' variant.witnessIndex)}}" id="{{variant.id}}">
-        <span class="variant_content">
-          {{{variant.text_schnipsel}}}
-        </span>
-        <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
-          {{t variant.type}}
-        </span>
+      <div class="variant {{if variant.witnessIndex1 (concat '-color' variant.witnessIndex1)}}" id="{{variant.id}}">
+        {{#if variant.witnessIndex2}}
+          <span class="variant_secondBorder -color{{variant.witnessIndex2}}"></span>
+        {{/if}}
+          <span class="variant_content">
+            {{{variant.text_schnipsel}}}
+          </span>
+          <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
+            {{t variant.type}}
+          </span>
       </div>
     {{/if}}
   {{/each}}
