Adapt menu and links Resolves: ADWDd-2258

--- a/app/templates/nav.hbs
+++ b/app/templates/nav.hbs
@@ -3,33 +3,17 @@
   <p class="nav_subheading">{{t 'goettingenAcademyOfSciencesAndHumanities'}}</p>
   <h2 class="nav_heading">{{t 'leibnizLetters'}}</h2>
 
-  <h3 class="nav_subheading">{{t 'browse'}}</h3>
-  <ul>
-    <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=author" class="nav_link -sender" target="_blank">{{t 'sender'}}</a>
-    </li>
-    <li>
-      <a href="{{!-- TODO: Recipient URL has to be available in DSpace --}}" class="nav_link -recipient" target="_blank">{{t 'recipient'}}</a>
-    </li>
-    <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=dateissued" class="nav_link -date" target="_blank">{{t 'date'}}</a>
-    </li>
-    <li>
-      <a href="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/browse?type=volume" class="nav_link -number" target="_blank">{{t 'serialNumber'}}</a>
-    </li>
-  </ul>
-
   <h3 class="nav_subheading">Info &amp; Hilfe</h3>
   <ul>
     {{! TODO: Update links}}
     <li>
-      <a href="about" class="nav_link -about">{{t 'aboutThisProjekt'}}</a>
+      <a href="http://adw-goe.de/forschung/forschungsprojekte-akademienprogramm/leibniz-edition/" class="nav_link -about">{{t 'aboutThisProjekt'}}</a>
     </li>
     <li>
-      <a href="contact" class="nav_link -contact">{{t 'contact'}}</a>
+      <a href="http://www.gwlb.de/Leibniz/Leibnizarchiv/Mitarbeiter/" class="nav_link -contact">{{t 'contact'}}</a>
     </li>
     <li>
-      <a href="impressum" class="nav_link -legal">{{t 'impressum'}}</a>
+      <a href="http://adw-goe.de/impressum/" class="nav_link -legal">{{t 'impressum'}}</a>
     </li>
   </ul>
 
