--- a/app/templates/components/lane-variants.hbs
+++ b/app/templates/components/lane-variants.hbs
@@ -31,18 +31,25 @@
 </header>
 
 <div class="lane_content">
-  {{#each content.variants as |variant|}}
+  {{#each content.variants as |variant index|}}
     {{#if variant.visible}}
-      <div class="variant {{if variant.witnessIndex1 (concat '-color' variant.witnessIndex1)}}" id="{{variant.id}}">
-        {{#if variant.witnessIndex2}}
-          <span class="variant_secondBorder -color{{variant.witnessIndex2}}"></span>
-        {{/if}}
+      <div class="variant" id="{{variant.id}}">
+        {{#each variant.witnessesIndex as |zeuge windex|}}
+          <span class="variant_border{{windex}} -color{{zeuge}}"></span>
+          {{#if (eq variant.witnessesIndex.length (incr windex))}}
+            <span class="variant_content -shift{{windex}}">
+            {{{variant.text_schnipsel}}}
+            </span>
+          {{/if}}
+        {{else}}
+          <span class="variant_border0"></span>
           <span class="variant_content">
             {{{variant.text_schnipsel}}}
           </span>
-          <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
-            {{t variant.type}}
-          </span>
+        {{/each}}
+        <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
+          {{t variant.type}}
+        </span>
       </div>
     {{/if}}
   {{/each}}
