Add shade to math elements in references Related to: ADWD-2376

--- a/app/styles/util/settings.scss
+++ b/app/styles/util/settings.scss
@@ -1,6 +1,6 @@
 // Base colors
 $alpha-color: #c90230;
-$shade: rgba(black, .06);
+$shade: #f0f0f0;;
 $shade-medium: rgba(black, .12);
 $shade-dark: rgba(black, .6);
 $shine: rgba(white, .3);
