--- a/app/templates/components/letter-header.hbs
+++ b/app/templates/components/letter-header.hbs
@@ -84,10 +84,12 @@
           {{#link-to 'letter' content.attachment.id}}N.&nbsp;{{content.attachment.number}}{{/link-to}})
         {{/if}}
       {{/if}}
-      {{#if content.tex_name}}
-      - TeXName: {{content.tex_name}}
-      {{else}}
-      - Kein TeXName
+      {{#if texName}}
+        {{#if content.tex_name}}
+        - TeXName: {{content.tex_name}}
+        {{else}}
+        - Kein TeXName
+        {{/if}}
       {{/if}}
     </p>
     <p>
