Add notice to referenced lines Resolves: ADWD-2362

--- a/app/templates/partials/letter-metadata.hbs
+++ b/app/templates/partials/letter-metadata.hbs
@@ -33,5 +33,12 @@
   </h3>
   <p>{{#each content.sprache as |sprache index|}}{{if index ', '}}{{t (concat 'languageName.' sprache)}}{{/each}}</p>
 
+  {{#if content.zeilenverweis}}
+    <h3>
+      Hinweis:
+    </h3>
+      {{t 'referencedLines'}}
+    {{/if}}
+
   {{yield}}
 </aside>
