--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -20,8 +20,8 @@
   }
 
   &.-highlight {
-    background: $text-color-light;
-    color: white;
+    background-color: #f0f0f0;
+    box-shadow: 5px 5px 2px rgba(0,0,0,0.5);
   }
 
   &.-visible {
