--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -61,6 +61,13 @@
 
   }
 
+  .roundbox {
+    border: 1px solid;
+    border-radius: 5px 5px;
+    margin: 0px 2px;
+    padding: 1px 2px;
+  }
+
   .source {
     font-style: italic;
     font-weight: bold;
