--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -20,8 +20,7 @@
   }
 
   &.-highlight {
-    background-color: #f0f0f0;
-    box-shadow: 5px 5px 2px rgba(0,0,0,0.5);
+    background-color: #a8a8a8 !important;
   }
 
   &.-visible {
