Add test and commentary to reference darkening Related to: ADWD-2425, ADWD-2009

--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -20,7 +20,7 @@
   }
 
   &.-highlight {
-    background-color: #a8a8a8 !important;
+    background-color: rgb(190, 190, 190) !important;
   }
 
   &.-visible {
@@ -45,8 +45,7 @@
     }
 
     &.-highlight {
-      background: $text-color-light;
-      color: white;
+      background-color: rgb(190, 190, 190) !important;
     }
 
     &.-image {
