--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -88,7 +88,7 @@
 
   @for $i from 0 through 5 {
     &.-shift#{$i} {
-      padding-left: #{4 * $i}px;
+      padding-left: #{$i * $variant-border-width-raw +1}px;
     }
   }
 }
@@ -115,7 +115,7 @@
     content: " ";
     position: absolute;
     top: 0px;
-    left: #{$i * 4}px;
+    left: #{$i * $variant-border-width-raw}px;
     right: 0px;
     bottom: 0px;
     border-left: $border-width-bold $border-style $border-color-dark;
