--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -117,6 +117,7 @@
     top: 0px;
     left: #{$i * $variant-border-width-raw}px;
     right: 0px;
+    width: $border-width-bold;
     bottom: 0px;
     border-left: $border-width-bold $border-style $border-color-dark;
   }
