--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -62,6 +62,7 @@
   .roundbox {
     border: 1px solid;
     border-radius: 5px 5px;
+    font-style: italic;
     margin: 0px 2px;
     padding: 1px 2px;
   }
