--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import 'blocks/citation';
 @import 'blocks/content';
 @import 'blocks/drag-handle';
+@import 'blocks/footer';
 @import 'blocks/header';
 @import 'blocks/icons';
 @import 'blocks/lane';
