Add start page with description Related to: ADWD-2568
There are also minor formatting changes to the error pages and the footer

--- a/app/styles/blocks/content.scss
+++ b/app/styles/blocks/content.scss
@@ -20,6 +20,11 @@
   }
 }
 
+.content_start {
+  width: 50%;
+  margin: 2*$g auto;
+}
+
 .content_svg-overlay {
   pointer-events: none; // TODO: Find a way to ignore pointer events in IE<10
   position: absolute;
