--- a/app/templates/404.hbs
+++ b/app/templates/404.hbs
@@ -1,8 +1,16 @@
 {{#header-container}}
   <div class="header_main">
-    <h1 class="header_title">
-      404
-    </h1>
-    <p>{{t 'pageNotFound'}} {{#link-to 'index'}}{{t 'goToStart'}}{{/link-to}}</p>
+    <div class="header_title">
+      <h1 class="header_heading">
+        404
+      </h1>
+      <p class="header_info">
+        {{t 'pageNotFound'}} {{#link-to 'index'}}{{t 'goToStart'}}{{/link-to}}
+      </p>
+    </div>
   </div>
 {{/header-container}}
+
+{{#footer-container}}
+  {{letter-footer}}
+{{/footer-container}}
